# AuthService

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
DATABASE/: .env  docker-compose.yml
src/: .env  main.py
src/api/v1/: api_depends.py  errors.py  ruotings.py
src/api/v1/auth/: docs.py  exceptions.py  views.py
src/api/v1/users/: docs.py  exceptions.py  views.py
src/apps/auth/: models.py  repository.py  schemas.py  service.py  utils.py
src/apps/users/: models.py  repository.py  schemas.py  service.py
src/certs/: private.pem
src/core/: db_manager.py  models_mixins.py  security.py  settings.py
src/infra/: UoW.py  repository.py
src/migrations/: env.py
src/migrations/versions/: 2025_08_11_1651-7d26f38611c7_create_users.py  2025_08_12_0018-b791a564d5ca_add_auth_sessions_refresh_tokens.py
